# fastauth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  main.py  pyproject.toml
.github/workflows/: build.yml  docker-build.yml
src/fastauth/: app.py  main.py
src/fastauth/alembic/: env.py
src/fastauth/alembic/versions/: 0001_initial_migration.py
src/fastauth/api/: __init__.py  auth.py  health.py  permissions.py  rbac.py  roles.py  users.py
src/fastauth/core/: config.py  deps.py  security.py
src/fastauth/crud/: permission.py  rbac.py  role.py  user.py
src/fastauth/db/: session.py
src/fastauth/middleware/: __init__.py  exception.py  logging.py  request_id.py
src/fastauth/models/: __init__.py  health.py  permission.py  role.py  role_permission.py  role_permissions.py  user.py  user_role.py  user_roles.py
